# Pointcloud_Perception

./: Dockerfile  README.md  build.md
data/lidar_apollo_instance_segmentation/: vls-128.fp32-batch1.json
data/lidar_centerpoint/: pts_voxel_encoder_centerpoint.engine  pts_voxel_encoder_centerpoint_tiny.engine
launch/: pointcloud_perception.launch.py  pointcloud_perception.launch.xml
src/common/autoware_point_types/: CMakeLists.txt
src/common/interpolation/: CMakeLists.txt
src/common/object_recognition_utils/: CMakeLists.txt
src/common/tensorrt_common/: CMakeLists.txt
src/common/tier4_autoware_utils/: CMakeLists.txt
src/common/tier4_autoware_utils/include/tier4_autoware_utils/geometry/: geometry.hpp
src/launch/: perception.launch.xml  sensing.launch.xml
src/perception/detected_object_validation/: CMakeLists.txt  package.xml
src/perception/detected_object_validation/launch/: obstacle_pointcloud_based_validator.launch.xml
src/perception/detection_by_tracker/config/: detection_by_tracker.param.yaml
src/perception/detection_by_tracker/launch/: detection_by_tracker.launch.xml
src/perception/detection_by_tracker/src/: detection_by_tracker_core.cpp
src/perception/euclidean_cluster/: CMakeLists.txt  package.xml
src/perception/euclidean_cluster/config/: voxel_grid_based_euclidean_cluster.param.yaml
src/perception/ground_segmentation/: CMakeLists.txt  package.xml
src/perception/lidar_apollo_instance_segmentation/launch/: lidar_apollo_instance_segmentation.launch.xml
src/sensing/pointcloud_preprocessor/: CMakeLists.txt
(+18 files in other folders)
